crates/nrzrepo/tests/snapshots/query__basic_monorepo_get_packages_with_less_than_1_dependents_(npm@10.5.0).snap
---
source: crates/nrzrepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "packages": {
      "items": [
        {
          "name": "//",
          "directDependents": {
            "length": 0
          }
        },
        {
          "name": "another",
          "directDependents": {
            "length": 0
          }
        },
        {
          "name": "my-app",
          "directDependents": {
            "length": 0
          }
        }
      ]
    }
  }
}
