crates/nrzrepo/tests/snapshots/query__nrz_trace_get_`button.tsx`_with_dependencies_(npm@10.5.0).snap
---
source: crates/nrzrepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "button.tsx",
      "dependencies": {
        "files": {
          "items": [
            {
              "path": "button.css"
            },
            {
              "path": "button.json"
            }
          ]
        }
      }
    }
  }
}
