crates/nrzrepo/tests/snapshots/query__nrz_trace_get_`circular.ts`_with_dependencies_(npm@10.5.0).snap
---
source: crates/nrzrepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "circular.ts",
      "dependencies": {
        "files": {
          "items": [
            {
              "path": "circular2.ts"
            }
          ]
        }
      }
    }
  }
}
