crates/nrzrepo/tests/snapshots/query__nrz_trace_get_`export_named.js`_with_dependencies_(npm@10.5.0).snap
---
source: crates/nrzrepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "export_named.js",
      "dependencies": {
        "files": {
          "items": [
            {
              "path": "bar.js"
            },
            {
              "path": "foo.js"
            }
          ]
        }
      }
    }
  }
}
